# Apolysis

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  action.yml
.github/: pull_request_template.md
crates/apolysis-cli/: Cargo.toml
crates/apolysis-cli/src/: cli.rs  main.rs
crates/apolysis-cli/tests/: cli_run.rs  intent.rs  observe.rs  verify.rs  visibility.rs
crates/apolysis-daemon/: Cargo.toml
crates/apolysis-daemon/src/: adapter.rs  config.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  runtime.rs  scope.rs  server.rs  state.rs
crates/apolysis-daemon/tests/: config.rs  daemon_pipeline.rs  health_cli.rs  live_runtime.rs  metrics.rs  observer_runtime.rs  runtime_adapters.rs  scope_coordination.rs  socket_api.rs  writer_pipeline.rs
crates/apolysis-evidence-objects/: Cargo.toml  README.md
crates/apolysis-evidence-objects/src/: crypto.rs  error.rs  lib.rs  model.rs  service.rs  storage.rs
crates/apolysis-evidence-objects/tests/: real_concurrency.rs  real_lifecycle.rs  real_privileges.rs  real_schema_invariants.rs  real_served_session.rs
crates/apolysis-evidence-objects/tests/support/: mod.rs  privileges.rs
crates/apolysis-feedback/: Cargo.toml
crates/apolysis-feedback/src/: lib.rs
crates/apolysis-feedback/tests/: accountability_feedback.rs  atomic_feedback.rs
crates/apolysis-gateway/: Cargo.toml  README.md
crates/apolysis-gateway-postgres/: Cargo.toml  README.md  SCHEMA.md
crates/apolysis-gateway-postgres/deploy/: bootstrap_roles.sql  privileges.sql
crates/apolysis-gateway-postgres/examples/: postgres_crash_driver.rs
crates/apolysis-gateway-postgres/migrations/: 0001_gateway_ledger.sql  0002_current_authority.sql  0003_evidence_object_lifecycle.sql
crates/apolysis-gateway-postgres/src/: error.rs  lib.rs  model.rs  replay.rs  repository.rs
crates/apolysis-gateway-postgres/src/operations/: bind_runtime.rs  finish_run.rs  ingest.rs  mod.rs  open_run.rs
crates/apolysis-gateway-postgres/tests/: postgres_conformance.rs  postgres_durability.rs
crates/apolysis-gateway-postgres/tests/support/: mod.rs
crates/apolysis-gateway-server/: Cargo.toml
crates/apolysis-gateway-server/src/: authority.rs  config.rs  error.rs  file_input.rs  http.rs  lib.rs  main.rs  qualification.rs  server.rs
crates/apolysis-gateway-server/src/authority/: admin.rs  certificate.rs  input.rs  policy.rs  store.rs
crates/apolysis-gateway-testkit/: Cargo.toml  README.md
crates/apolysis-gateway-testkit/src/: lib.rs  scenarios.rs
crates/apolysis-gateway/src/: digest.rs  error.rs  identity.rs  lib.rs  memory.rs  repository.rs  service.rs
crates/apolysis-gateway/tests/: digest_vectors.rs  gateway_conformance.rs  repository_adapter.rs
crates/apolysis-observer/: Cargo.toml
crates/apolysis-observer/src/: abi.rs  capabilities.rs  lib.rs  live.rs  process_context.rs  redaction.rs  scope.rs
crates/apolysis-observer/tests/: abi.rs  daemon_observer.rs  redaction.rs  scope_set.rs
crates/apolysis-projection-postgres/: Cargo.toml  README.md  SCHEMA.md
crates/apolysis-projection-postgres/examples/: postgres_projection_driver.rs
crates/apolysis-projection-postgres/migrations/: 0001_run_lifecycle_projection.sql
crates/apolysis-projection-postgres/src/: error.rs  lib.rs  migration.rs  model.rs  repository.rs  validation.rs
crates/apolysis-projection-postgres/tests/: config.rs  model.rs  postgres_projection.rs
crates/apolysis-projection-postgres/tests/postgres_projection/: bounded_pagination.rs  commit_ambiguity.rs  initialization_lock_order.rs  lifecycle_projection.rs  logical_input_size.rs  rls_scope.rs  schema_invariants.rs  workers_rebuild_and_failures.rs
crates/apolysis-projection-postgres/tests/support/: mod.rs
crates/apolysis-store/: Cargo.toml
crates/apolysis-store/src/: hash_chain.rs  lib.rs
crates/apolysis-store/tests/: hash_chain.rs  jsonl_writer.rs
crates/apolysis-validation/: Cargo.toml
crates/apolysis-validation/src/: lib.rs
crates/apolysis-validation/tests/: backup_manifest.rs  cli.rs  dry_run_report.rs  f3_block_enablement_policy.rs  f3_block_operator_audit.rs  f3_block_validation_gate.rs  f3_bpf_lsm_file_read_prototype.rs  f3_local_seccomp_execution.rs  f4_gvisor_metadata_evidence.rs  f4_kata_boundary_evidence.rs  f4_kubernetes_agent_sandbox_evidence.rs  f4_live_runtime_evidence_bundle.rs  f4_runtime_adapter_evidence.rs  f4_runtime_guardrail_matrix.rs  f5_chaos_performance_evidence.rs  f5_external_provider_qualification.rs  f5_operator_controller_evidence.rs  f5_registry_promotion_execution.rs  f5_release_promotion_policy.rs  f5_service_mesh_live_evidence.rs  f5_signing_execution_evidence.rs  f5_signing_profile.rs  f5_worm_archive_execution.rs  f5_worm_archive_policy.rs  host_dry_run.rs  kubernetes_context.rs  performance_gate.rs  policy_guardrails_block_enablement_policy.rs  policy_guardrails_block_operator_audit.rs  policy_guardrails_block_validation_gate.rs  policy_guardrails_bpf_lsm_file_read_prototype.rs  policy_guardrails_local_seccomp_execution.rs  production_hardening_chaos_performance_evidence.rs  production_hardening_external_provider_qualification.rs  production_hardening_operator_controller_evidence.rs  production_hardening_registry_promotion_execution.rs  production_hardening_release_promotion_policy.rs  production_hardening_service_mesh_live_evidence.rs  production_hardening_signing_execution_evidence.rs  production_hardening_signing_profile.rs  (+14 more)
crates/apolysis-visibility/: Cargo.toml
crates/apolysis-visibility/src/: lib.rs
crates/apolysis-visibility/tests/: assessment.rs  f4_gvisor_metadata.rs  f4_kata_boundary.rs  runtime_guardrails_gvisor_metadata.rs  runtime_guardrails_kata_boundary.rs
docs/: codex-intent-mismatch-demo.md  codex-live-demo-launch-blog.md  codex-live-demo-public-assets.md  codex-live-demo-runbook.md  github-action.md  hash-chain-verification.md  jsonl-schema-v1.md  quickstart.md  release-artifact-dry-run.md  release-validation-handoff.md  signed-release-artifact-dry-run.md  starter-issues.md  threat-model.md  timeline-shipping.md  (+2 more)
(+410 files in other folders)
