[workspace]
members = [
    "crates/apolysis-accountability",
    "crates/apolysis-core",
    "crates/apolysis-daemon",
    "crates/apolysis-feedback",
    "crates/apolysis-kubernetes",
    "crates/apolysis-policy",
    "crates/apolysis-store",
    "crates/apolysis-observer",
    "crates/apolysis-runtime",
    "crates/apolysis-visibility",
    "crates/apolysis-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/0xLaiHo/Apolysis"
homepage = "https://github.com/0xLaiHo/Apolysis"
readme = "README.md"

[workspace.dependencies]
aya = "0.13.1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
tokio = { version = "1", default-features = false }
