[package]
name = "apolysis-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-accountability = { path = "../apolysis-accountability" }
apolysis-core = { path = "../apolysis-core" }
apolysis-observer = { path = "../apolysis-observer" }
apolysis-runtime = { path = "../apolysis-runtime" }
apolysis-kubernetes = { path = "../apolysis-kubernetes" }
apolysis-store = { path = "../apolysis-store" }
apolysis-visibility = { path = "../apolysis-visibility" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[[bin]]
name = "apolysis"
path = "src/main.rs"
