[package]
name = "apolysis-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-accountability = { path = "../apolysis-accountability" }
apolysis-core = { path = "../apolysis-core" }
apolysis-feedback = { path = "../apolysis-feedback" }
apolysis-observer = { path = "../apolysis-observer" }
apolysis-policy = { path = "../apolysis-policy" }
apolysis-store = { path = "../apolysis-store" }
apolysis-validation = { path = "../apolysis-validation" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }

[[bin]]
name = "apolysisd"
path = "src/main.rs"

[[bin]]
name = "apolysisd-health"
path = "src/bin/apolysisd-health.rs"

[[bin]]
name = "apolysis-runtime-foundation-pipeline-benchmark"
path = "src/bin/apolysis-runtime-foundation-pipeline-benchmark.rs"
