[package]
name = "apolysis-evidence-objects"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
aes-gcm = "0.10.3"
apolysis-contracts = { path = "../apolysis-contracts" }
apolysis-gateway = { path = "../apolysis-gateway" }
aws-credential-types = "=1.3.0"
aws-sdk-s3 = "=1.138.0"
bytes = "1.10.1"
getrandom.workspace = true
hmac = "0.13.0"
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
sha2.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = [
    "json",
    "postgres",
    "runtime-tokio-rustls",
] }
thiserror = "2.0.12"
tokio = { workspace = true, features = ["io-util", "time"] }
tracing = "0.1.44"
zeroize = "1.8.2"

[dev-dependencies]
apolysis-gateway-postgres = { path = "../apolysis-gateway-postgres" }
apolysis-gateway-server = { path = "../apolysis-gateway-server" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lib]
path = "src/lib.rs"
