[package]
name = "apolysis-feedback"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-accountability = { path = "../apolysis-accountability" }
apolysis-core = { path = "../apolysis-core" }
serde_json.workspace = true

[lib]
path = "src/lib.rs"
