[package]
name = "apolysis-gateway-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
apolysis-contracts = { path = "../apolysis-contracts" }
apolysis-gateway = { path = "../apolysis-gateway" }
serde_json.workspace = true

[lib]
path = "src/lib.rs"
