[package]
name = "apolysis-observer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-core = { path = "../apolysis-core" }
apolysis-policy = { path = "../apolysis-policy" }
apolysis-store = { path = "../apolysis-store" }

[lib]
path = "src/lib.rs"
