[package]
name = "apolysis-observer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-core = { path = "../apolysis-core" }
apolysis-feedback = { path = "../apolysis-feedback" }
apolysis-kubernetes = { path = "../apolysis-kubernetes" }
apolysis-policy = { path = "../apolysis-policy" }
apolysis-store = { path = "../apolysis-store" }
aya.workspace = true
libc.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt", "signal", "time"] }

[lib]
path = "src/lib.rs"
