[package]
name = "apolysis-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-core = { path = "../apolysis-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }

[lib]
path = "src/lib.rs"
