[package]
name = "apolysis-validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-core = { path = "../apolysis-core" }
apolysis-policy = { path = "../apolysis-policy" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml_edit.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "apolysis-validate-host"
path = "src/bin/apolysis-validate-host.rs"

[[bin]]
name = "apolysis-f2-performance-report"
path = "src/bin/apolysis-f2-performance-report.rs"

[[bin]]
name = "apolysis-f2-visibility-report"
path = "src/bin/apolysis-f2-visibility-report.rs"

[[bin]]
name = "apolysis-f3-block-validation-report"
path = "src/bin/apolysis-f3-block-validation-report.rs"
