[package]
name = "apolysis-validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-core = { path = "../apolysis-core" }
apolysis-policy = { path = "../apolysis-policy" }
aya.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml_edit.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "apolysis-validate-host"
path = "src/bin/apolysis-validate-host.rs"

[[bin]]
name = "apolysis-f2-performance-report"
path = "src/bin/apolysis-f2-performance-report.rs"

[[bin]]
name = "apolysis-f2-visibility-report"
path = "src/bin/apolysis-f2-visibility-report.rs"

[[bin]]
name = "apolysis-f3-block-validation-report"
path = "src/bin/apolysis-f3-block-validation-report.rs"

[[bin]]
name = "apolysis-f3-seccomp-file-read-prototype"
path = "src/bin/apolysis-f3-seccomp-file-read-prototype.rs"

[[bin]]
name = "apolysis-f3-block-enablement-policy"
path = "src/bin/apolysis-f3-block-enablement-policy.rs"

[[bin]]
name = "apolysis-f3-block-operator-audit"
path = "src/bin/apolysis-f3-block-operator-audit.rs"

[[bin]]
name = "apolysis-f4-runtime-guardrail-matrix"
path = "src/bin/apolysis-f4-runtime-guardrail-matrix.rs"

[[bin]]
name = "apolysis-f5-release-promotion-policy"
path = "src/bin/apolysis-f5-release-promotion-policy.rs"

[[bin]]
name = "apolysis-f5-registry-promotion-execution-evidence"
path = "src/bin/apolysis-f5-registry-promotion-execution-evidence.rs"

[[bin]]
name = "apolysis-f5-signing-profile"
path = "src/bin/apolysis-f5-signing-profile.rs"

[[bin]]
name = "apolysis-f5-signing-execution-evidence"
path = "src/bin/apolysis-f5-signing-execution-evidence.rs"

[[bin]]
name = "apolysis-f5-worm-archive-policy"
path = "src/bin/apolysis-f5-worm-archive-policy.rs"

[[bin]]
name = "apolysis-f5-worm-archive-execution-evidence"
path = "src/bin/apolysis-f5-worm-archive-execution-evidence.rs"

[[bin]]
name = "apolysis-f5-service-mesh-live-evidence"
path = "src/bin/apolysis-f5-service-mesh-live-evidence.rs"

[[bin]]
name = "apolysis-f5-operator-controller-evidence"
path = "src/bin/apolysis-f5-operator-controller-evidence.rs"
