[package]
name = "apolysis-validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-core = { path = "../apolysis-core" }
apolysis-policy = { path = "../apolysis-policy" }
aya.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml_edit.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "apolysis-validate-host"
path = "src/bin/apolysis-validate-host.rs"

[[bin]]
name = "apolysis-runtime-foundation-performance-report"
path = "src/bin/apolysis-runtime-foundation-performance-report.rs"

[[bin]]
name = "apolysis-runtime-foundation-visibility-report"
path = "src/bin/apolysis-runtime-foundation-visibility-report.rs"

[[bin]]
name = "apolysis-policy-guardrails-block-validation-report"
path = "src/bin/apolysis-policy-guardrails-block-validation-report.rs"

[[bin]]
name = "apolysis-policy-guardrails-seccomp-file-read-prototype"
path = "src/bin/apolysis-policy-guardrails-seccomp-file-read-prototype.rs"

[[bin]]
name = "apolysis-policy-guardrails-block-enablement-policy"
path = "src/bin/apolysis-policy-guardrails-block-enablement-policy.rs"

[[bin]]
name = "apolysis-policy-guardrails-block-operator-audit"
path = "src/bin/apolysis-policy-guardrails-block-operator-audit.rs"

[[bin]]
name = "apolysis-runtime-guardrails-runtime-guardrail-matrix"
path = "src/bin/apolysis-runtime-guardrails-runtime-guardrail-matrix.rs"

[[bin]]
name = "apolysis-production-hardening-signing-profile"
path = "src/bin/apolysis-production-hardening-signing-profile.rs"

[[bin]]
name = "apolysis-production-hardening-signing-execution-evidence"
path = "src/bin/apolysis-production-hardening-signing-execution-evidence.rs"
