[package]
name = "apolysis-visibility"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apolysis-core = { path = "../apolysis-core" }
apolysis-kubernetes = { path = "../apolysis-kubernetes" }
apolysis-validation = { path = "../apolysis-validation" }

[lib]
path = "src/lib.rs"
